--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>JS repetition</title>
 </head>
 <body>
+
+    <h1>hello world!</h1>
+    <h2>Hello NTI!</h2>
+    <ul>
+        <li> Grej 1</li>
+        <li> Grej 2</li>
+        <li> Grej 3</li>
+        <li> Grej 4</li>
+        <li> Grej 5</li>
+        <li> Grej 6</li>
+        <li> Grej 7</li>
+        <li> Grej 8</li>
+        <li> Grej 9</li>
+        <li> Grej 10</li>
+    </ul>
     
     <script src="script.js"></script>
 </body>
